# fortuna-leaderboard-server

./: .gitignore  CMakeLists.txt  README.md  config.json
.github/workflows/: build.yml
cmake/: FindJsoncpp.cmake  FindMySQL.cmake
deploy/nginx/: fortuna-leaderboard.conf
deploy/systemd/: fortuna-leaderboard.service
public/: index.html
sql/: schema.sql
src/: ScoresController.cpp  ScoresController.h  main.cpp
